--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -14,8 +14,8 @@
   "tomowallet.common.button.withdraw": "Withdraw",
   "tomowallet.common.list.language.english": "English",
   "tomowallet.common.list.language.french": "Français",
-  "tomowallet.common.list.network.tomochain.testnet": "TomoChain TestNet",
-  "tomowallet.common.list.network.tomochain.mainnet": "TomoChain MainNet",
+  "tomowallet.common.list.network.tomochain.testnet": "Tao TestNet",
+  "tomowallet.common.list.network.tomochain.mainnet": "Tao MainNet",
   "tomowallet.component.navbar.menu.switch.network": "Switch network",
   "tomowallet.component.navbar.menu.language": "Language",
   "tomowallet.component.navbar.switch.mode.privacy": "Switch to Privacy Mode",
@@ -35,19 +35,19 @@
   "tomowallet.component.navbar.popup.showwallet.tab.privatekey.note": "Remove all spaces to use private key, please",
   "tomowallet.component.navbar.popup.networkconfirmation.title": "Confirmation",
   "tomowallet.component.navbar.popup.networkconfirmation.content.text": "Changing network setting will log you out of the wallet as well. Are you sure you want to change the network?",
-  "tomowallet.component.footer.versiontext": "TomoWallet 2019 - v1.0",
+  "tomowallet.component.footer.versiontext": "TaoWallet 2020 - v1.0",
   "tomowallet.component.footer.option.help": "Need help?",
   "tomowallet.component.footer.option.termsofuse": "Terms Of Use",
   "tomowallet.component.footer.option.privacypolicy": "Privacy Policy",
   "tomowallet.component.popup.clipboard.content.message": "Copied to Clipboard",
   "tomowallet.component.input.fileupload.button.label": "Upload File",
   "tomowallet.component.input.fileupload.placeholder": "Drag/drop a file or click to browse...",
-  "tomowallet.container.welcome.title": "Welcome to TomoWallet",
-  "tomowallet.container.welcome.description": "TomoWallet (our friends call us TMW) is a free, client-side interface helping you interact with TomoChain. Our easy-to-use, open-source platform allows you to generate wallets, interact with smart contracts, and so much more.",
+  "tomowallet.container.welcome.title": "Welcome to TaoWallet",
+  "tomowallet.container.welcome.description": "TaoWallet is a free, client-side interface helping you interact with Tao. Our easy-to-use, open-source platform allows you to generate wallets, interact with smart contracts, and so much more.",
   "tomowallet.container.welcome.button.createnewwallet": "Create a New Wallet",
   "tomowallet.container.welcome.textbetweenbuttons": "or",
   "tomowallet.container.welcome.button.importwallet": "Import Your Wallet",
-  "tomowallet.container.welcome.image.alt": "Welcome to TomoWallet",
+  "tomowallet.container.welcome.image.alt": "Welcome to TaoWallet",
   "tomowallet.container.welcome.form.password.title": "Wallet Quick Access",
   "tomowallet.container.welcome.form.password.addressview": "Address: ",
   "tomowallet.container.welcome.form.password.description": "Type in password to continue accessing your previous wallet",
@@ -59,8 +59,8 @@
   "tomowallet.container.welcome.form.password.error.keystore.not.exists": "Cannot find any keystore file.",
   "tomowallet.container.welcome.form.password.error.invalid.privatekey": "Received private key is invalid.",
   "tomowallet.container.welcome.form.password.error.retrieve.wallet.failed": "Cannot retrieve wallet information due to corrupted Web3 provider.",
-  "tomowallet.container.welcome.notification.mobile.browser.not.supported": "Sorry! We don’t support TomoWallet web version on mobile browsers. Please download app version to access TomoWallet.",
-  "tomowallet.container.welcome.notification.mobile.download.part1": "Download TomoWallet app",
+  "tomowallet.container.welcome.notification.mobile.browser.not.supported": "Sorry! We don’t support TaoWallet web version on mobile browsers. Please download app version to access TaoWallet.",
+  "tomowallet.container.welcome.notification.mobile.download.part1": "Download TaoWallet app",
   "tomowallet.container.welcome.notification.mobile.download.part2": "Link: http://l.ead.me/bb0oA6",
   "tomowallet.container.createwallet.title": "Create New Wallet",
   "tomowallet.container.createwallet.popup.password.title": "Password",
@@ -114,7 +114,7 @@
   "tomowallet.container.importwallet.tab.ledger.text": "Ledger Wallet",
   "tomowallet.container.importwallet.tab.ledger.input.label": "Select HD derivation path",
   "tomowallet.container.importwallet.tab.ledger.input.placeholder": "Select HD derivation path...",
-  "tomowallet.container.importwallet.tab.ledger.input.description": "To unlock the wallet, try paths {path1} or {path2} with Ethereum App, or try path {path3} with TomoChain App (on Ledger)",
+  "tomowallet.container.importwallet.tab.ledger.input.description": "To unlock the wallet, try paths {path1} or {path2} with Ethereum App, or try path {path3} with Tao App (on Ledger)",
   "tomowallet.container.importwallet.tab.metamask.image.alt": "MetaMask",
   "tomowallet.container.importwallet.tab.metamask.text": "MetaMask",
   "tomowallet.container.importwallet.tab.metamask.content.message": "Make sure you installed MetaMask extension in order for this option to work.",
@@ -139,7 +139,7 @@
   "tomowallet.container.importwallet.popup.password.title": "Password",
   "tomowallet.container.importwallet.popup.password.input.placeholder": "Enter password",
   "tomowallet.container.importwallet.popup.password.input.invalidpassword": "Given password is incorrect.",
-  "tomowallet.container.mywallet.title": "My TomoWallet",
+  "tomowallet.container.mywallet.title": "My TaoWallet",
   "tomowallet.container.mywallet.section.address.title": "Public Address",
   "tomowallet.container.mywallet.section.address.privacy.title": "Privacy Address",
   "tomowallet.container.mywallet.section.balance.balance": "Total Balance",
@@ -164,7 +164,7 @@
   "tomowallet.container.mywallet.table.portfolio.header.send": "Send",
   "tomowallet.container.mywallet.table.portfolio.header.receive": "Receive",
   "tomowallet.container.mywallet.table.portfolio.cell.tokenname.image.alt": "{name} Symbol",
-  "tomowallet.container.mywallet.table.portfolio.cell.tokenname.publisher": "TomoChain",
+  "tomowallet.container.mywallet.table.portfolio.cell.tokenname.publisher": "Tao",
   "tomowallet.container.mywallet.table.portfolio.cell.action.viewontomoscan": "View {token} on TomoScan",
   "tomowallet.container.mywallet.table.portfolio.error.load.failed": "Cannot load token list!",
   "tomowallet.container.mywallet.table.tab.transaction.title": "Transactions",
@@ -198,14 +198,14 @@
   "tomowallet.container.mywallet.popup.success.info.amountsent": "You have sent",
   "tomowallet.container.mywallet.popup.success.info.transactionhash": "Transaction hash",
   "tomowallet.container.mywallet.popup.receivetoken.title": "Receive",
-  "tomowallet.container.mywallet.popup.receivetoken.content.message": "Your address supports transferring to TOMO and other TomoChain tokens",
+  "tomowallet.container.mywallet.popup.receivetoken.content.message": "Your address supports transferring to TAO and other Tao tokens",
   "tomowallet.container.mywallet.popup.receivetoken.privacy.content.message": "This is your Privacy Wallet Address. It supports transfers sent only through Privacy Mode",
   "tomowallet.container.mywallet.popup.deposit.title": "Deposit",
   "tomowallet.container.mywallet.popup.withdraw.title": "Withdraw",
   "tomowallet.container.mywallet.table.portfolio.header.privacy.balance": "Privacy Balance",
   "tomowallet.container.mywallet.popup.processing.send.token.title": "ANONYMIZING YOUR TRANSACTION INFORMATION",
   "tomowallet.container.mywallet.popup.processing.scanning.privacy.title": "YOUR PRIVACY MODE IS BEING SETUP",
-  "tomowallet.container.mywallet.popup.deposit.privacy.required": "You need to Deposit TOMO to Privacy Balance from Public Balance first",
+  "tomowallet.container.mywallet.popup.deposit.privacy.required": "You need to Deposit TAO to Privacy Balance from Public Balance first",
   "tomowallet.container.mywallet.popup.deposit.privacy.description": "Deposit tokens from your Public Balance to start making privacy transactions",
   "tomowallet.container.mywallet.popup.withdraw.privacy.description": "Withdraw your privacy tokens back to your Public Balance to make public transactions",
   "tomowallet.container.mywallet.popup.send.privacy.description": "Send tokens to another Privacy Wallet Address"
