--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -14,8 +14,8 @@
   "tomowallet.common.button.withdraw": "Retirer",
   "tomowallet.common.list.language.english": "English",
   "tomowallet.common.list.language.french": "Français",
-  "tomowallet.common.list.network.tomochain.testnet": "Réseau de Test TomoChain",
-  "tomowallet.common.list.network.tomochain.mainnet": "Réseau Principal TomoChain",
+  "tomowallet.common.list.network.tomochain.testnet": "Réseau de Test Tao",
+  "tomowallet.common.list.network.tomochain.mainnet": "Réseau Principal Tao",
   "tomowallet.component.navbar.menu.switch.network": "Réseau de commutation",
   "tomowallet.component.navbar.menu.language": "Langue",
   "tomowallet.component.navbar.switch.mode.privacy": "Passer en Mode Confidentialité",
@@ -43,7 +43,7 @@
   "tomowallet.component.input.fileupload.button.label": "Téléverser un Fichier",
   "tomowallet.component.input.fileupload.placeholder": "Glissez / déposez un fichier ou cliquez pour naviguer...",
   "tomowallet.container.welcome.title": "Bienvenue à TomoWallet",
-  "tomowallet.container.welcome.description": "TomoWallet (nos amis nous appellent TMW) est une interface client gratuite vous permettant d’interagir avec TomoChain. Notre plate-forme open-source conviviale vous permet de générer des portefeuilles, d'interagir avec des contrats intelligents et bien plus encore.",
+  "tomowallet.container.welcome.description": "TomoWallet (nos amis nous appellent TMW) est une interface client gratuite vous permettant d’interagir avec Tao. Notre plate-forme open-source conviviale vous permet de générer des portefeuilles, d'interagir avec des contrats intelligents et bien plus encore.",
   "tomowallet.container.welcome.button.importwallet": "Importez Votre Portefeuille",
   "tomowallet.container.welcome.textbetweenbuttons": "ou",
   "tomowallet.container.welcome.button.createnewwallet": "Créer un Nouveau Portefeuille",
@@ -114,7 +114,7 @@
   "tomowallet.container.importwallet.tab.ledger.text": "Portefeuille Ledger",
   "tomowallet.container.importwallet.tab.ledger.input.label": "Sélectionnez le chemin de dérivation HD",
   "tomowallet.container.importwallet.tab.ledger.input.placeholder": "Sélectionnez le chemin de dérivation HD...",
-  "tomowallet.container.importwallet.tab.ledger.input.description": "Pour déverrouiller le portefeuille, essayez les chemins {path1} ou {path2} avec Ethereum App, ou essayez chemin {path3} avec TomoChain App (dans Ledger).",
+  "tomowallet.container.importwallet.tab.ledger.input.description": "Pour déverrouiller le portefeuille, essayez les chemins {path1} ou {path2} avec Ethereum App, ou essayez chemin {path3} avec Tao App (dans Ledger).",
   "tomowallet.container.importwallet.tab.metamask.image.alt": "MetaMask",
   "tomowallet.container.importwallet.tab.metamask.text": "MetaMask",
   "tomowallet.container.importwallet.tab.metamask.content.message": "Assurez-vous d'avoir installé l'extension MetaMask pour que cette option fonctionne.",
@@ -165,7 +165,7 @@
   "tomowallet.container.mywallet.table.portfolio.header.send": "Envoyer",
   "tomowallet.container.mywallet.table.portfolio.header.receive": "Recevoir",
   "tomowallet.container.mywallet.table.portfolio.cell.tokenname.image.alt": "{name} Symbole",
-  "tomowallet.container.mywallet.table.portfolio.cell.tokenname.publisher": "TomoChain",
+  "tomowallet.container.mywallet.table.portfolio.cell.tokenname.publisher": "Tao",
   "tomowallet.container.mywallet.table.portfolio.cell.action.viewontomoscan": "Voir {token} sur TomoScan",
   "tomowallet.container.mywallet.table.portfolio.error.load.failed": "Impossible de charger la liste de jetons!",
   "tomowallet.container.mywallet.table.transactions.header.txhash": "Txn Hachage",
@@ -205,7 +205,7 @@
   "tomowallet.container.mywallet.table.portfolio.header.privacy.balance": "Balance de Confidentialité",
   "tomowallet.container.mywallet.popup.processing.send.token.title": "Votre mode de confidentialité est en cours de configuration",
   "tomowallet.container.mywallet.popup.processing.scanning.privacy.title": "VOTRE MODE DE CONFIDENTIALITÉ EST EN COURS DE CONFIGURATION",
-  "tomowallet.container.mywallet.popup.deposit.privacy.required": "Vous devez d'abord déposer TOMO sur le solde de confidentialité du solde public",
+  "tomowallet.container.mywallet.popup.deposit.privacy.required": "Vous devez d'abord déposer TAO sur le solde de confidentialité du solde public",
   "tomowallet.container.mywallet.popup.deposit.privacy.description": "Déposez des jetons de votre solde public pour commencer à effectuer des transactions de confidentialité",
   "tomowallet.container.mywallet.popup.withdraw.privacy.description": "Retirez vos jetons de confidentialité à votre solde public pour effectuer des transactions publiques",
   "tomowallet.container.mywallet.popup.send.privacy.description": "Envoyer des jetons à une autre adresse du portefeuille de confidentialité"
